messed with form

--- a/templates/category.mustache
+++ b/templates/category.mustache
@@ -5,6 +5,7 @@
                 <div>
                 {{{description}}}
                 </div>
+                {{{elibrarysearch}}}
             </div>
         </div>
         <div class="col-12 col-md-7 mb-3 px-0 px-lg-2 section-page-top-cont">
