--- a/templates/category.mustache
+++ b/templates/category.mustache
@@ -3,9 +3,15 @@
         <div class="col-12 col-md-5 mb-3 px-2 px-lg-2 section-page-top-cont">
             <div class="row mx-0" style="">
                 <div>
+                {{#journallinkbutton}}
+                    <div class=py-3>
+                        <a class="btn btn-outline-primary rounded-0" href="{{journallinkbutton}}">Visit Journal</a>
+                    </div>
+                {{/journallinkbutton}}
                 {{{description}}}
                 </div>
                 {{{elibrarysearch}}}
+                
             </div>
         </div>
         <div class="col-12 col-md-7 mb-3 px-0 px-lg-2 section-page-top-cont">
