--- a/templates/mainpage/jumbo/jumbosideitem.mustache
+++ b/templates/mainpage/jumbo/jumbosideitem.mustache
@@ -1,6 +1,6 @@
-<div class="row mx-0 pt-2 main-page-announcements-card-cont">
-    <div class="col col-12 px-0 h-100">
-        <a class="stretched-link main-page-link-wrapper" href="{{{itemurl}}}"></a>
+<div id="pagination-{{itemindex}}" class="row mx-0 pt-2 main-page-announcements-card-cont">
+    <div class="col col-12 px-0 h-100 sidejumboitemcontainer">
+        <a class="stretched-link main-page-link-wrapper sidejumbo-link" aria-disabled="true" data-link-id="{{itemindex}}" data-link-address="{{{itemurl}}}"></a>
         <div class="main-page-announcements-card w-100 h-100">
             <div class="row h-100 mx-0">
                 <div class="col col-8 h-100 px-0 main-page-announcements-card-text-cont">
