added main page swiper

--- a/templates/mainpage/jumbo/jumbomodal.mustache
+++ b/templates/mainpage/jumbo/jumbomodal.mustache
@@ -5,7 +5,7 @@
                 {{#jumboside}}
                     <div id="slide-{{itemindex}}" class="swiper-slide" style="height: 100%;">
                         <a class="stretched-link main-page-link-wrapper" href="{{{itemurl}}}"></a>
-                        <div class="card main-page-jumbo-main w-100">
+                        <div class="card main-page-jumbo-main w-100 border-0">
                             <img class="card-img w-100 d-block main-page-main-image rounded-0" style="filter:brightness(0.93); object-fit:contain; object-position:center; background-color: var(--primary);" src="{{itemimg}}"/>
                         </div>
                     </div>
