added main page swiper

--- a/templates/categorycourselist.mustache
+++ b/templates/categorycourselist.mustache
@@ -1,6 +1,9 @@
 
 <div class="row mx-0" style="">
     <div class="col-12 pb-3 px-0 px-lg-2">
+        {{#createcourse}}
+                    {{> theme_apoa/buttons/largebutton}}
+        {{/createcourse}}
         <div>
             {{#category}}
                 {{#courses}}
