--- a/templates/category.mustache
+++ b/templates/category.mustache
@@ -54,6 +54,7 @@
                 {{/categorylist}}
         </div>
     </div>
+    <h3 class="text-primary text-center text-underline">Our Journals</h3>
     <div class="row pt-3 mx-0 main-page-section-top-border">
         {{#categorylist}}
             {{^firsttab}}
