--- a/templates/categorycourselist.mustache
+++ b/templates/categorycourselist.mustache
@@ -4,6 +4,9 @@
         {{#createcourse}}
                     {{> theme_apoa/buttons/largebutton}}
         {{/createcourse}}
+        {{#copypage}}
+            {{> theme_apoa/buttons/largebutton}}
+        {{/copypage}}
         <div>
             {{#category}}
                 {{#courses}}
