--- a/templates/buttons/largebutton.mustache
+++ b/templates/buttons/largebutton.mustache
@@ -1,1 +1,1 @@
-<a class="btn btn-outline-primary rounded-0" style="font-size: 25px" href="{{buttonlink}}">{{buttontext}}</a>
+<a class="btn btn-outline-primary rounded-0 {{buttonclasses}}" style="font-size: 25px" href="{{buttonlink}}">{{buttontext}}</a>
