categories with no courses no longer displaye

--- a/templates/jumbo/jumbo.mustache
+++ b/templates/jumbo/jumbo.mustache
@@ -1,6 +1,6 @@
 <div class="container main-page-container container-fluid" style="/*border-bottom-style: none;*/border-bottom-color: var(--primary);">
     <div class="row mx-0">
-        <div class="col col-lg-8 col-sm-12 col-12 main-page-col"><a class="stretched-link main-page-link-wrapper" href="#{{jumboLink}}"></a>
+        <div class="col col-lg-8 col-sm-12 col-12 main-page-col"><a class="stretched-link main-page-link-wrapper" href="{{{jumbourl}}}"></a>
             <div class="card main-page-jumbo-main border-0 pr-lg-1">
                     <video class="main-page-jumbo-video main-page-main-image d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumboPlaceholder}}">
                     <source src="{{jumboVideo}}" type="video/webm">
