--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -1,4 +1,4 @@
-<a class="stretched-link main-page-link-wrapper" href=""></a>
+<a class="stretched-link main-page-link-wrapper" href="{{{jumbourl}}}"></a>
 <div class="card main-page-jumbo-main border-0 pr-lg-1">
     <video src="{{jumbobanner}}" class="main-page-jumbo-video main-page-main-image d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumbobannerposter}}">
     </video>
