--- a/templates/sectionlanding.mustache
+++ b/templates/sectionlanding.mustache
@@ -75,6 +75,7 @@
     </div>
     <div class="row pt-3 mx-0 main-page-section-top-border">
         {{#categorylist}}
+            {{#hascourses}}
             {{^About}}
             {{^Featured}}
             {{^Committee}}
@@ -119,6 +120,7 @@
                 
                 </div>
             {{/Elibrary}}
+            {{/hascourses}}
         {{/categorylist}}
     </div>
 </div>
