--- a/templates/sectionlanding.mustache
+++ b/templates/sectionlanding.mustache
@@ -12,7 +12,7 @@
                         {{#subcategorycourses}}
                             {{#first}}
                             <a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
-                                <div class="card border-0">
+                                <div class="card border-0 w-100">
                                     <img class="card-img w-100 d-block main-page-sub-card-img no-border-radius" src="{{itemimg}}">
                                     <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
                                         <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
