--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -142,10 +142,6 @@
                         {{#hasregionmainsettingsmenu}}
                             <div class="region_main_settings_menu_proxy"></div>
                         {{/hasregionmainsettingsmenu}}
-                        {{{ output.course_content_header }}}
-                        {{#headercontent}}
-                            {{> core/activity_header }}
-                        {{/headercontent}}
                         {{#overflow}}
                             <div class="container-fluid tertiary-navigation">
                                 <div class="navitem">
@@ -154,9 +150,9 @@
                             </div>
                         {{/overflow}}
                         {{#sidebar}}
-                        <div class="container main-page-container">
-                            <div class="row">
-                                <div class="col col-12 col-lg-8">
+                        <div class="container main-page-container pt-0 pt-md-1">
+                            <div class="row w-100 m-0">
+                                <div class="col col-12 col-lg-8 p-0 m-auto">
                                     {{{ output.main_content }}}
                                 </div>
                                 <div class="col col-12 col-lg-4">
@@ -169,7 +165,7 @@
                         </div>
                         {{/sidebar}}
                         {{^sidebar}}
-                        <div class="container main-page-container">
+                        <div class="container main-page-container pt-0 pt-md-1">
                                 {{{ output.main_content }}}
                         </div>
                         {{/sidebar}}
