--- a/templates/lists/mainpageeventslist.mustache
+++ b/templates/lists/mainpageeventslist.mustache
@@ -6,7 +6,7 @@
     <li class="list-group-item p-0 main-page-sub-list-group-item">
             <div class="card p-0" style="border-style: none;">
                 <div class="card-body pb-0 pt-2">
-                    <a class="mb-1 main-page-link main-page-more-link" href="{{sectionurl}}">more {{sectiontitle}}</a>
+                    <a class="mb-1 main-page-link main-page-more-link" href="{{{sectionurl}}}">more {{sectiontitle}}</a>
                 </div>
             </div>
     </li>
