--- a/templates/mainpage/events.mustache
+++ b/templates/mainpage/events.mustache
@@ -2,7 +2,7 @@
     {{#PreviousEvents}}
             <div class="col-md pb-3 px-0 px-lg-2">
                 <h4 class="text-center main-page-section-title pt-2 p-1 px-0">
-                    <a class="section_title main-page-link" href="{{sectionurl}}">{{sectiontitle}}</a>
+                    <a class="section_title main-page-link" href="{{{sectionurl}}}">{{sectiontitle}}</a>
                 </h4>
                 {{> theme_apoa/lists/mainpageeventslist}}
             </div>
@@ -10,7 +10,7 @@
     {{#OngoingEvents}}
             <div class="col-md pb-3 px-0 px-lg-2 order-first order-md-0">
                 <h4 class="text-center main-page-section-title pt-2 p-1 px-0 bg-accent">
-                    <a class="section_title main-page-link bg-transparent" href="{{sectionurl}}">{{sectiontitle}}</a>
+                    <a class="section_title main-page-link bg-transparent" href="{{{sectionurl}}}">{{sectiontitle}}</a>
                 </h4>
                 {{> theme_apoa/lists/mainpageeventslist}}
             </div>
@@ -18,7 +18,7 @@
     {{#FutureEvents}}
             <div class="col-md pb-3 px-0 px-lg-2">
                 <h4 class="text-center main-page-section-title pt-2 p-1 px-0">
-                    <a class="section_title main-page-link" href="{{sectionurl}}">{{sectiontitle}}</a>
+                    <a class="section_title main-page-link" href="{{{sectionurl}}}">{{sectiontitle}}</a>
                 </h4>
                 {{> theme_apoa/lists/mainpageeventslist}}
             </div>
