--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -170,6 +170,7 @@
                         {{/sidebar}}
                         {{^sidebar}}
                         <div class="container main-page-container">
+                                {{{searchblock}}}
                                 {{{ output.main_content }}}
                         </div>
                         {{/sidebar}}
