--- a/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
@@ -5,7 +5,7 @@
             <div class="card-text-over-picture">
                 <h4 class="main-page-link">{{itemtitle}}</h4>
                 <div>
-                    <p class="small"><span><a class="main-page-link-sub text-white"href="{{itemrooturl}}">{{itemroot}}</a></span><span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white"href="{{itemcaturl}}">{{itemcat}}</a></small></p>
+                    <p class="small"><span><a class="main-page-link-sub text-white"href="{{itemrooturl}}">{{itemroot}}</a></span><span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub text-white"href="{{itemtagurl}}">{{itemtag}}</a></small></p>
                 </div>
             </div>
         </div>
