--- a/templates/mainpage/about.mustache
+++ b/templates/mainpage/about.mustache
@@ -1,5 +1,5 @@
 
-    <div class="row py-6 mx-0 main-page-section-top-border">
+    <div id="aboutcontainer" class="row py-6 mx-0 main-page-section-top-border">
         <div class="col-md-6 mb-4 d-flex flex-column justify-content-center">
             <div class=""><img class="rounded img-fluid w-100 fit-cover h-100" src="{{aboutimg}}" /></div>
         </div>
