--- a/templates/mainpage/events.mustache
+++ b/templates/mainpage/events.mustache
@@ -1,4 +1,4 @@
-<div class="row py-3 mx-0 main-page-section-top-border">
+<div id="eventscontainer" class="row py-3 mx-0 main-page-section-top-border">
     {{#PreviousEvents}}
             <div class="col-md pb-3 px-0 px-lg-2">
                 <h4 class="text-center main-page-section-title pt-2 p-1 px-0">
