--- a/templates/mainpage/sections.mustache
+++ b/templates/mainpage/sections.mustache
@@ -4,9 +4,8 @@
         <p class="text-center">APOA has 12 subsections dedicated to specific fields of Orthopaedics</p>
     </div>
 </div>
-<div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 row-cols-xl-6 row-cols-md-3 row-cols-lg-4" id="accordion-3" role="tablist">
+<div id='sectionscontainer' class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 row-cols-xl-6 row-cols-md-3 row-cols-lg-4" id="accordion-3" role="tablist">
         {{#sections}}
             {{> theme_apoa/mainpage/sectionlogo}}
         {{/sections}}
-        
 </div>
