--- a/templates/mainpage/membership.mustache
+++ b/templates/mainpage/membership.mustache
@@ -1,8 +1,8 @@
 <div class="container h-100">
-    <div class="text-white bg-primary border rounded border-primary p-4 py-5 no-border-radius" style="background-color: var(--primary)!important;border-style: none!important;">
+    <div  class="text-white bg-primary border rounded border-primary p-4 py-5 no-border-radius" style="background-color: var(--primary)!important;border-style: none!important;">
         <div class="row h-100">
             <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
-                <div>
+                <div id='membershipcontainer'>
                     <h1 class="font-weight-bold mb-3">Membership</h1>
                     <p class="mb-4">The Asia Pacific Orthopaedic Association is the largest of its kind in the world. 
                         Representing 24 Member chapters, more than 65,000 members from over 40 countries.&nbsp;<br>Become a member and 
