many many changes too many to list

--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -1,9 +1,9 @@
 $primary: #336667 !default;
-$secondary: #D4D29E !default;
-$accent: #cb1e6fbd !default;
+$secondary: #D4D29E !default; 
+$accent: #cb1e6f !default;
 $course-content-maxwidth: 90%!important;
 $theme-colors: (
-  "accent": #cb1e6fbd
+  "accent": #cb1e6f
 );
 
 
