--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -130,6 +130,8 @@
                 {{> theme_apoa/secondarynav}}
             {{/secondarymoremenu}}
             {{{ output.full_header }}}
+            {{{ output.has_active_subscription }}}
+            {{{ output.has_federation_pending }}}
             <div id="page-content" class="pb-3 d-print-block">
                 <div id="region-main-box">
                     {{#hasregionmainsettingsmenu}}
