--- a/templates/user_menu.mustache
+++ b/templates/user_menu.mustache
@@ -74,7 +74,7 @@
             <div id="user-action-menu" class="dropdown-menu dropdown-menu-right">
                 <div id="usermenu-carousel" class="carousel slide" data-touch="false" data-interval="false" data-keyboard="false">
                     <div class="carousel-inner">
-                        <div id="carousel-item-main" class="carousel-item active" role="menu" tabindex="-1" aria-label="{{#str}}user{{/str}}">
+                        <div id="carousel-item-main" class="carousel-item active tool_usertours-resettourcontainer" role="menu" tabindex="-1" aria-label="{{#str}}user{{/str}}">
                             {{> core/user_action_menu_items }}
                         </div>
                         {{#submenus}}
