--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -798,7 +798,9 @@
   }
 
   .main-page-jumbo-title-logo-text  {
-    display: none;
+    font-size: 25px;
+    display: none;  
+    text-shadow: 1px 1px black;
   }
 
 
@@ -983,7 +985,7 @@
   }
 
   .card-text-over-picture{
-    background-color: $accent;
+    background-color: rgba(203, 30, 111, 0.8);
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
