--- a/scss/post.scss
+++ b/scss/post.scss
@@ -221,3 +221,37 @@ top: 0%;
 .btn-trans:hover{
   background-color: rgb(239 83 156);
 }
+
+.titlehelpicon{
+  font-size: 25px!important;
+}
+
+.countdowncont{
+  padding: 5px 5px 5px 5px;
+  //background-image: linear-gradient(to bottom, #e55096 0%,  #e23a89 48% , white 48%, #cb1e6f 50%);
+  border-radius: 10%;
+  text-shadow: 2px 2px black;
+  min-width: 80px;
+  //box-shadow: 0 0 5px 2px #fff;
+}
+
+.countdown{
+  bottom: 5%;
+  background: rgb(2 0 1 / 30%);
+  border: 1px white;
+  border-style: solid;
+  position: absolute;
+}
+
+.card-columns {
+  @include media-breakpoint-only(sm) {
+    column-count: 2;
+  }
+  @include media-breakpoint-only(md) {
+    column-count: 2;
+  }
+  @include media-breakpoint-only(lg) {
+    column-count: 3;
+  }
+}
+
