--- a/templates/mainpage/jumbo.mustache
+++ b/templates/mainpage/jumbo.mustache
@@ -2,17 +2,16 @@
     <div id="jumbo" class="col col-lg-8 col-sm-12 col-12 main-page-col">
         {{#jumbomain}}
             <div>
-            {{>theme_apoa/mainpage/jumbo/jumbomain}}
+                {{>theme_apoa/mainpage/jumbo/jumbomain}}
             </div>
-            {{>theme_apoa/mainpage/jumbo/jumbomodal}}
         {{/jumbomain}}
+        {{#sidejumbo}}
+            {{> theme_apoa/mainpage/jumbo/jumbomodal}}
+        {{/sidejumbo}}
     </div>
     <div class="col col-lg-4 col-sm-12 col-12 main-page-col main-page-sec-col bg-white">
-        <h4 class="p-1 pt-2 m-0 main-page-section-title main-page-link">Announcements</h4>
-        <div class="main-page-announcements-cont">
-            {{#jumboside}}
-                {{>theme_apoa/mainpage/jumbo/jumbosideitem}}
-            {{/jumboside}}
-        </div>
+            {{#sidejumbo}}
+                {{{blocks.get_blocks}}}     
+            {{/sidejumbo}}
     </div>
 </div>
