--- a/templates/mainpage/subjumbo.mustache
+++ b/templates/mainpage/subjumbo.mustache
@@ -5,13 +5,19 @@
         {{/Elibrary}}
     </div>
     <div class="col-md-6 col-lg-3 pb-3 px-0 px-lg-2">
-        {{#SectionHighlights}}
-            {{> theme_apoa/mainpage/subjumbo/subjumbolist}}
-        {{/SectionHighlights}}
+        {{#subjumbo1}}
+            {{{blocks.get_blocks}}}  
+        {{/subjumbo1}}
+        {{!{{#SectionHighlights}}
+            {{!{{> theme_apoa/mainpage/subjumbo/subjumbolist}}
+        {{!{{/SectionHighlights}}
     </div>
     <div class="col-md-6 col-lg-3 pb-3 px-0 px-lg-2">
-        {{#Newsletter}}
-            {{> theme_apoa/mainpage/subjumbo/subjumbolist}}
-        {{/Newsletter}}
+        {{#subjumbo2}}
+            {{{blocks.get_blocks}}}   
+        {{/subjumbo2}}
+        {{!{{#Newsletter}}
+           {{! {{> theme_apoa/mainpage/subjumbo/subjumbolist}}
+        {{!{{/Newsletter}}
     </div>
 </div>
