fixed pdf display

--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -33,7 +33,7 @@
             </span>
 
         </h1>
-        <div class="row text-center text-white align-content-center m-1 countdown">
+        <div class="row text-center text-white align-content-center m-1 countdown d-none">
             <div class="col-3 px-1" style="width: 140px">
                 <div class="countdowncont">
                     <h1 id="jumbocountdowndays" class="mb-0"></h3>
