--- a/scss/post.scss
+++ b/scss/post.scss
@@ -20,8 +20,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
 }
 
 .committee{
-    padding-right: 1rem;
-    -webkit-margin-start: 0.2rem;
+    padding: 0;
+    margin-left: 0.2rem;
+    margin-right: 0.2rem;
 }
 
 img.committeeicon{
@@ -255,3 +256,6 @@ top: 0%;
   }
 }
 
+.afterlink{
+  flex-direction: column!important;
+}
