--- a/templates/lists/listitems/categorycourselistitem.mustache
+++ b/templates/lists/listitems/categorycourselistitem.mustache
@@ -10,7 +10,7 @@
                                 {{{itemdescription}}}   
                                 {{#itemtag}}
                                 <span>&nbsp;|&nbsp;</span>
-                                <a href="{{caturl}}"><small class="main-page-link-sub">{{itemtag}}</small></a>
+                                <a href="{{{itemtagurl}}}"><small class="main-page-link-sub">{{itemtag}}</small></a>
                                 {{/itemtag}}
                             </p>
                         </div>
