fixed modal link

--- a/templates/mainpage/jumbo/jumbomodal.mustache
+++ b/templates/mainpage/jumbo/jumbomodal.mustache
@@ -1,11 +1,11 @@
-<div id="jumbomodal" class="w-100  hide" style="position: absolute;overflow: hidden;">
+<div id="jumbomodal" class="w-100  hide" style="position: absolute;overflow: hidden; z-index: 6">
     <div class="simple-slider" style="/*height: 100%;*/">
         <div class="swiper-container" style="/*height: 100%;*/">
             <div class="swiper-wrapper">
                 {{#blocks}}
                     {{#indexes}}
                     <div id="slide-{{index}}" class="swiper-slide" style="height: 100%;" data-src="" data-control-id="{{index}}">
-                        <a class="stretched-link main-page-link-wrapper" href="#"></a>
+                        <a class="stretched-link main-page-link-wrapper" href=""></a>
                         <div class="card main-page-jumbo-main w-100 border-0">
                             <img class="card-img w-100 d-block main-page-main-image rounded-0" style="filter:brightness(0.93); object-fit:contain; object-position:center; background-color: var(--primary);" src="#"/>
                         </div>
