--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -392,7 +392,7 @@
   
   .journal-sub-card-text-cont {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
   }
   
   .main-page-card {
