--- a/templates/mainpage/subjumbo/subjumbolistitemwide.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemwide.mustache
@@ -5,8 +5,8 @@
                 <h5 class="text-muted card-subtitle mb-2 journal-sub-card-title main-page-link main-page-sub-card-text">{{itemtitle}}</h5>
                 <div class="journal-sub-card-text-cont">
                     <p class="mb-2 journal-card-text w-100 mw-100" style="font-size: smaller">
-                        <a class="main-page-link-sub d-inline-block text-truncate" href="{{itemcaturl}}" style="max-width: 75%!important">{{itemcat}}asfffffffffffffffffffffffffffffffffffffff</a>
-                        {{#itemtag}}&nbsp;|&nbsp;{{/itemtag}}<small class="text-muted main-page-link-sub mw-25" style="max-width: 25%!important; width:auto"><a class="main-page-link-sub text-truncate d-block w-auto" href="{{{itemtagurl}}}">{{itemtag}}asfasfffffffffffffffffffffffffffffffffffffffffasfasfasfasfasfasfasf</a></small>
+                        <a class="main-page-link-sub d-inline-block text-truncate" href="{{itemcaturl}}" style="max-width: 75%!important">{{itemcat}}</a>
+                        {{#itemtag}}&nbsp;|&nbsp;{{/itemtag}}<small class="text-muted main-page-link-sub mw-25" style="max-width: 25%!important; width:auto"><a class="main-page-link-sub text-truncate d-block w-auto" href="{{{itemtagurl}}}">{{itemtag}}</a></small>
                     </p>
                 </div>
                 {{#forum}}
