--- a/templates/mainpage/subjumbo/subjumbolistitemwidetop.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemwidetop.mustache
@@ -6,8 +6,8 @@
                 <h5 class="journal-card-title main-page-link"><br>{{itemtitle}}<br><br></h5>
                 <div class="w-100">
                     <p class="mb-2 journal-card-text mw-50" style="font-size: smaller">
-                        <span class="mw-100"><a class="main-page-link-sub d-inline-block text-truncate mw-100 text-white"href="{{itemcaturl}}">{{itemcat}}</a></span>
-                        <span>{{#itemtag}}&nbsp;|&nbsp;{{/itemtag}}<small class="text-muted main-page-link-sub"><a class="main-page-link-sub text-white" href="{{{itemtagurl}}}">{{itemtag}}</a></small></span>
+                        <span class="mw-100"><a class="main-page-link-sub d-inline-block text-truncate mw-100 text-white pr-1"href="{{itemcaturl}}">{{itemcat}}</a></span>
+                        <span>{{#itemtag}}<a class="main-page-link-sub border-left border-white pl-1 small text-white" href="{{{itemtagurl}}}">{{itemtag}}</a>{{/itemtag}}</span>
                     </p>
                 </div>
                 </div>
