--- a/templates/mainpage/subjumbo/subjumbolistitem.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitem.mustache
@@ -3,8 +3,8 @@
         <div class="card-body pb-0">
             <h5 class="text-muted card-subtitle mb-2 main-page-link">{{itemtitle}}</h5>
             <div>
-                <p class="small"><span><a class="main-page-link-sub"href="{{{itemrooturl}}}">{{itemroot}}</a>
-                </span><span>&nbsp;|&nbsp;</span><small><a class="main-page-link-sub"href="{{{itemtagurl}}}">{{itemtag}}</a></small></p>
+                <p class="small"><span><a class="main-page-link-sub pr-1"href="{{{itemrooturl}}}">{{itemroot}}</a>
+                </span><small><a class="main-page-link-sub border-left border-white pl-1"href="{{{itemtagurl}}}">{{itemtag}}</a></small></p>
             </div>
         </div>
     </div>
