fixed alignment on course cards

--- a/templates/mainpage/subjumbo/subjumbolistitem.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitem.mustache
@@ -2,9 +2,9 @@
     <div class="card" style="border-style: none;"><a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
         <div class="card-body pb-0">
             <h5 class="text-muted card-subtitle mb-2 main-page-link">{{itemtitle}}</h5>
-            <div>
-                <p class="small"><span><a class="main-page-link-sub pr-1"href="{{{itemrooturl}}}">{{itemroot}}</a>
-                </span><small><a class="main-page-link-sub border-left border-white pl-1"href="{{{itemtagurl}}}">{{itemtag}}</a></small></p>
+            <div class="small align-items-center d-inline-flex mb-3">
+                    <a class="main-page-link-sub pr-1"href="{{itemrooturl}}">{{itemroot}}</a>
+                    <a class="main-page-link-sub border-left border-primary pl-1 text-primary small"href="{{{itemtagurl}}}">{{itemtag}}</a>
             </div>
         </div>
     </div>
