--- a/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemtop.mustache
@@ -4,9 +4,9 @@
         <div class="card-img-overlay text-white no-border-radius">
             <div class="card-text-over-picture">
                 <h4 class="main-page-link">{{itemtitle}}</h4>
-                <div>
-                    <p class="small"><span><a class="main-page-link-sub text-white pl-1"href="{{{itemrooturl}}}">{{itemroot}}</a>
-                    </span><small><a class="main-page-link-sub text-white border-right border-white pr-1"href="{{{itemtagurl}}}">{{itemtag}}</a></small></p>
+                <div class="small align-items-center d-inline-flex">
+                    <a class="main-page-link-sub text-white pr-1" href="{{{itemrooturl}}}">{{itemroot}}</a>
+                    <a class="main-page-link-sub border-left border-white pl-1 text-white small"href="{{{itemtagurl}}}">{{itemtag}}</a>
                 </div>
             </div>
         </div>
